# Group-29

./: .gitignore  README.md  config.toml  config.txt
group29_backup/: Cargo.toml  backup_log.txt  config.toml  cpu_usage_log.txt
group29_backup/release/: backup.d  gui_backup.d
group29_backup/release/.fingerprint/ab_glyph-8cbe0b71ad73edd8/: lib-ab_glyph  lib-ab_glyph.json
group29_backup/release/.fingerprint/ab_glyph-f52de9d917523448/: lib-ab_glyph  lib-ab_glyph.json
group29_backup/release/.fingerprint/ab_glyph_rasterizer-675df1f5814db499/: lib-ab_glyph_rasterizer  lib-ab_glyph_rasterizer.json
group29_backup/release/.fingerprint/accesskit-3f8f62403d19b401/: lib-accesskit  lib-accesskit.json
group29_backup/release/.fingerprint/accesskit-fb91c248183b04e2/: lib-accesskit  lib-accesskit.json
group29_backup/release/.fingerprint/accesskit_consumer-9fbe4efa78c09240/: lib-accesskit_consumer  lib-accesskit_consumer.json
group29_backup/release/.fingerprint/accesskit_consumer-b9d63e93d5552133/: lib-accesskit_consumer  lib-accesskit_consumer.json
group29_backup/release/.fingerprint/accesskit_windows-2dd5c8471936ed30/: lib-accesskit_windows  lib-accesskit_windows.json
group29_backup/release/.fingerprint/accesskit_windows-de4aeb24b171ee4d/: lib-accesskit_windows  lib-accesskit_windows.json
group29_backup/release/.fingerprint/accesskit_winit-140b3a15a8eb91f8/: lib-accesskit_winit  lib-accesskit_winit.json
group29_backup/release/.fingerprint/accesskit_winit-5ff25819072e1af2/: lib-accesskit_winit  lib-accesskit_winit.json
group29_backup/release/.fingerprint/adler-233a3da7172373c3/: lib-adler  lib-adler.json
group29_backup/release/.fingerprint/adler2-9a00763eeddb6df0/: lib-adler2  lib-adler2.json
group29_backup/release/.fingerprint/ahash-0888230340af0514/: build-script-build-script-build  build-script-build-script-build.json
group29_backup/release/.fingerprint/ahash-4020b5912a414c06/: lib-ahash  lib-ahash.json
group29_backup/release/.fingerprint/ahash-e3adca7f874cfcd6/: run-build-script-build-script-build  run-build-script-build-script-build.json
group29_backup/release/.fingerprint/ahash-ef19f5ca69eb65bf/: lib-ahash  lib-ahash.json
group29_backup/release/.fingerprint/arboard-c5842f5c6c6d083f/: lib-arboard  lib-arboard.json
group29_backup/release/linux/: backup
group29_backup/release/macos/: backup
group29_backup/release/release_linux/: backup
group29_backup/src/: backup.rs  config_autorun.rs  cpu_usage.rs  dir_functions.rs  eventi.rs  eventi_pulito.rs  eventi_sporco.rs  gui_backup.rs  main.rs  mouse_controller.rs  suoni.rs  tracker.rs
(+1407 files in other folders)
