[package]
name = "group29_backup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
rdev = "0.5.3"        # Libreria per la gestione dei dispositivi di input
winit = "0.27"              # Libreria per ottenere le dimensioni dello schermo
rodio = "0.14"
serde = { version = "1.0.210", features = ["derive"] }
toml = "0.8.19"      # Libreria per la riproduzione di suoni
native-dialog = "0.7.0"
rfd = "0.12.0"
sysinfo = "0.32.0"
rayon = "1.10.0"
egui = "0.29.1"
eframe = "0.24"
auto-launch = "0.2.0"
cpal = "0.14"
winreg = "0.10.1"
dirs = "5.0.1"