[package]
name = "group29_backup"
version = "0.1.0"
edition = "2021"


# Aggiungi la licenza
license = "MIT"  # Puoi scegliere una licenza appropriata

# Aggiungi gli autori
authors = ["FrancescoPassiatore"]
# Aggiungi il manutentore
maintainer = "FrancescoPassiatore"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "backup"
path = "src/main.rs"
# Specifica il tipo di subsystem come "windows" (nasconde la finestra del terminale)
windows_subsystem = "windows"

# Configura la GUI come binario separato
[[bin]]
name = "gui_backup"
path = "src/gui_backup.rs"  # Percorso del file contenente `main`

[dependencies]
rdev = "0.5.3"        # Libreria per la gestione dei dispositivi di input
winit = "0.27"              # Libreria per ottenere le dimensioni dello schermo
rodio = "0.14"
serde = { version = "1.0.210", features = ["derive"] }
toml = "0.8.19"      # Libreria per la riproduzione di suoni
native-dialog = "0.7.0"
sysinfo = "0.32.0"
rayon = "1.10.0"
egui = "0.29.1"
eframe = "0.22"
auto-launch = "0.2.0"
cpal = "0.14"


[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.10.1"

[target.'cfg(target_os = "linux")'.dependencies]
x11 = "2.18.0"
dirs = "4.0.0"